--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="./App.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="src/assets/css/style.css">
      <!-- Font Awesome -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <!-- Bootstrap core CSS -->
-     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+     <link href="src/assets/css/bootstrap.min.css" rel="stylesheet">
      <!-- Material Design Bootstrap -->
-     <link href="assets/css/mdb.min.css" rel="stylesheet">
+     <link href="src/assets/css/mdb.min.css" rel="stylesheet">
      <!-- Customizer -->
      <link rel="stylesheet" href="https://mdbootstrap.com/live/_MDB/css/customizer.min.css">
      <!-- Your custom styles (optional) -->
@@ -24,13 +24,13 @@
     <script src="build/bundle.js"></script>
 
      <!-- JQuery -->
-   <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
+   <script type="text/javascript" src="src/assets/js/jquery-3.2.1.min.js"></script>
    <!-- Bootstrap dropdown -->
-   <script type="text/javascript" src="assets/js/popper.min.js"></script>
+   <script type="text/javascript" src="src/assets/js/popper.min.js"></script>
    <!-- Bootstrap core JavaScript -->
-   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+   <script type="text/javascript" src="src/assets/js/bootstrap.min.js"></script>
    <!-- MDB core JavaScript -->
-   <script type="text/javascript" src="assets/js/mdb.min.js"></script>
+   <script type="text/javascript" src="src/assets/js/mdb.min.js"></script>
    <!-- Customizer -->
    <script type="text/javascript" src="https://mdbootstrap.com/live/_MDB/js/customizer.min.js"></script>
    <!-- Custom -->
